refactor: move security-related classes to the security package